fixed text vertical spacing on jumbotron

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -6,15 +6,6 @@
     margin-top: 15px;
 }
 
-.exp{
-    width:80px;
-    height:80px;
-    background-color:red;
-    border-radius:100%;
-    line-height:80px;
-    text-align:center;
-    vertical-align:middle;
-    display:inline-block;
+.vertical {
+    margin-top:4%;
 }
-
-.fa-newspaper { line-height: inherit;}
